vlib/v/checker/tests/receiver_unknown_type_single_letter.out
vlib/v/checker/tests/receiver_unknown_type_single_letter.vv:1:1: error: unknown type `Abc`
    1 | fn (p Abc) foo() {}
      | ~~~~~~~~~~~~~~~~
    2 |
